# astro-bench

./: .gitignore  CLAUDE.md  README.md  beat_sota.py  challenge.md  download_data.py  eval_utils.py  pyproject.toml  rebuild_test_sets.py  verify.py
.claude/agents/: haiku-scientist.md  opus-scientist.md  sonnet-scientist.md
experiments/: cnn_augmented_probs.npy  exp_gnn.py  exp_tabular_rich.py  gnn_probs.npy  hgb_test_probs.npy  tabular_HGB_d=10_lr=0.05_probs.npy  tabular_HGB_d=8_lr=0.03_probs.npy  tabular_RF_1000_probs.npy  vit_ViT-64-6_probs.npy
submissions/baselines/: README.md  metrics_composition.json  metrics_gamma.json  train_composition_dnn.py  train_gamma_dnn.py  train_mlp.py  train_published.py  train_published_v2.py  train_published_v3.py  train_rf.py
submissions/haiku-composition-mar11/: COMPLETION_STATUS.md  EXPERIMENT_RUNDOWN.md  EXPLORATION_PLAN.md  FULL_EXPLORATION_PLAN.md  GPU_EXECUTION_EXPLANATION.md  SYSTEMATIC_EXPLORATION_LOG.md  SYSTEMATIC_SUMMARY.md  journal.md  metrics_composition.json  monitor_experiments.py  results.tsv  run_phase2_systematic.sh  run_sequential.py  train_v10_resnet_deeper.py  train_v11_mlp_flattened.py  train_v12_transformer.py  train_v13_svm.py  train_v14_v1_long_training.py  train_v15_v1_class_weights.py  train_v16_v1_label_smoothing.py  train_v17_haiku_mar8_exact.py  train_v17_haiku_mar8_exact_with_quality_cuts.py  train_v18_deeper_cnn.py  train_v18_qcut_on_train.py  train_v19_wider_cnn.py  train_v1_attention_features.py  train_v20_vit_2x2.py  train_v21_mlp_flattened.py  train_v22_randomforest_safe.py  train_v4_resnet.py  (+13 more)
(+389 files in other folders)
